# yb-snake2d-cpp-opengl

./: CMakeLists.txt  CMakePresets.json  README.md
include/: bone.h  clock.h  corpse.h  file_utils.h  font_renderer.h  game_object.h  game_state.h  resource_manager.h  shader.h  snake.h  system_settings.h  user_input.h  world.h
resources/settings/: app_settings.txt
resources/shaders/: shader.fs  shader.vs  shader_field.fs  shader_menu.fs  shader_particles.vs
src/: clock.cpp  corpse.cpp  file_utils.cpp  game_state.cpp  main.cpp  resource_manager.cpp  snake.cpp  user_input.cpp  world.cpp
